Fixed horizontal scrollbars show up on login page

--- a/src/Bifrost.Client/Shared/LoginBackground.razor.scss
+++ b/src/Bifrost.Client/Shared/LoginBackground.razor.scss
@@ -9,7 +9,7 @@ $planet-speeds: ("midgard": 30000ms, "vanaheim": 60000ms, "hel": 56000ms, "alfhe
 $planet-positions: ("midgard": 5, "vanaheim": 25, "hel": 80, "alfheim": 75, "jotunheim": 10, "nifheim": 40, "muspelheim": 50, "savartalheim": 60);
 
 .bifrost-background {
-  position: absolute;
+  position: fixed;
   width: 1100px;
   height: 1100px;
   top: 50%;
